# cmake-grpc-server-example

./: CMakeLists.txt  README.md
cmake/: grpc.cmake
include/: encryptor.hpp
proto/: encryptor.proto  encryptorservice.proto
src/: CMakeLists.txt  encryption-client.cpp  encryption-server.cpp  main.cpp
